Fix search bar widths on mobile.

--- a/app/component/search.scss
+++ b/app/component/search.scss
@@ -501,6 +501,7 @@ ul.react-autowhatever__items-list {
   padding-bottom: 10px;
   padding-top: 53px;
   position: absolute;
+  width: 50%;
   z-index: 802;
 }
 
